---
title: Schema conceptuala locala - PDB CATALOG (fragmentare V BEA, ELK ortogonal)
config:
  layout: elk
  look: classic
---
erDiagram
  BRANDS {
    NUMBER_19 id PK
    VARCHAR2_3 code UK
    VARCHAR2_50 brand
    VARCHAR2_300 description
  }
  ITEMS_CATEGORY {
    NUMBER_19 id PK
    VARCHAR2_2 code UK
    VARCHAR2_50 category "NOT NULL"
    VARCHAR2_50 name "NOT NULL"
  }
  ITEMS_TYPE {
    NUMBER_19 id PK
    VARCHAR2_4 code UK
    VARCHAR2_200 item_type
    VARCHAR2_600 description
  }
  ITEMS_SEASONS {
    NUMBER_19 id PK
    VARCHAR2_120 code UK
    VARCHAR2_40 description
    VARCHAR2_8 season_year
    NUMBER_10 active "CHECK 0,1"
  }
  ITEMS_CORE {
    NUMBER_19 id PK
    VARCHAR2_50 item_code UK
    VARCHAR2_350 item_name "NOT NULL"
    NUMBER_19 brand_id FK
    NUMBER_19 season_id FK
    NUMBER_19 item_type_id FK
    NUMBER_19 category_id FK
    NUMBER_10 active
  }
  ITEMS_EXTRA {
    NUMBER_19 id PK
    VARCHAR2_1000 item_description
    BINARY_DOUBLE vat
    NUMBER_9_2 last_cost_price
    VARCHAR2_20 main_barcode
    VARCHAR2_60 supplier_code
    NUMBER_9_2 weight
    VARCHAR2_10 um
  }
  V_ITEMS {
    NUMBER_19 id
    VARCHAR2_50 item_code
    VARCHAR2_350 item_name
    VARCHAR2_1000 item_description
  }

  BRANDS         ||--o{ ITEMS_CORE  : "brand_id"
  ITEMS_CATEGORY ||--o{ ITEMS_CORE  : "category_id"
  ITEMS_TYPE     ||--o{ ITEMS_CORE  : "item_type_id"
  ITEMS_SEASONS  ||--o{ ITEMS_CORE  : "season_id"
  ITEMS_CORE     ||--|| ITEMS_EXTRA : "id 1:1 CASCADE"
  ITEMS_CORE     ||..|| V_ITEMS     : "transparenta"
  ITEMS_EXTRA    ||..|| V_ITEMS     : "transparenta"
